features_extraction updated

--- a/notebooks_and_datasets/features_extraction.ipynb
+++ b/notebooks_and_datasets/features_extraction.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,6 +133,10 @@
     "    ego_spacing = env.unwrapped.config.get('ego_spacing', 'N/A')\n",
     "    algorithm_name = model.__class__.__name__\n",
     "\n",
+    "# ACRESCENTAR A MEDIA DAS DISTNACIAS RELATIVAS \n",
+    "# ACRESCENTAR A FREQUENCIA DE CADA ACAO\n",
+    "# STOCHASTICITY - TRUE/FALSE\n",
+    "# mudar target para crash rate\n",
     "    # Dictionary with the environment configuration\n",
     "    env_config = {\n",
     "        'Duration': env.unwrapped.config.get('duration', 'N/A'),\n",
